fixed alignment in article "verwendung"

--- a/css/format.css
+++ b/css/format.css
@@ -169,7 +169,7 @@ hr {
 }
 .NotCollapsable {
   color:rgb(99,99,99);
-  padding-left:38px;
+  padding-left:32px;
 }
 
 input[type=text] {
